correct stripes spacing issue on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -165,7 +165,7 @@ p {
   -webkit-transform: skew(-20deg) translateX(100px);
   transform: skew(-20deg) translateX(100px);
   height: 100%;
-  width: 70%;
+  width: 64%;
   position: absolute;
   top: 0;
   left: 0;
@@ -313,7 +313,7 @@ p {
   box-shadow: -30px 0 #0d99da,-60px 0 #0d99da,-90px 0 #0d99da,-120px 0 #0d99da,-150px 0 #0d99da,-180px 0 #0d99da,-210px 0 #0d99da,-240px 0 #0d99da, -270px 0 #0d99da;
   position: absolute;
   top: 0;
-  left: 0;
+  left: -1em;
 }
 
 .panel.contact #contact {
